<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNotesActivity">

    <EditText
        android:id="@+id/title_EditText"
        android:inputType="text"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="61dp"
        android:autofillHints=""
        android:fontFamily="@font/futurabook"
        android:hint="@string/titre"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="320dp"
        />

    <EditText
        android:id="@+id/description_EditText"
        android:layout_width="350dp"
        android:layout_height="match_parent"
        android:layout_marginStart="50dp"
        android:layout_marginTop="160dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="100dp"
        android:autofillHints=""
        android:fontFamily="@font/futurabook"
        android:gravity="start"
        android:hint="@string/description"
        android:inputType="textMultiLine"
        android:lines="23"
        android:padding="10dp"
        android:scrollHorizontally="false"
        app:layout_constraintBottom_toTopOf="@+id/saveNotesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_EditText"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="400dp" />

    <Button
        android:id="@+id/saveNotesBtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="61dp"
        android:layout_marginBottom="16dp"
        android:background="@color/purple_200"
        android:fontFamily="@font/futuraheavy"
        android:text="@string/sauvegarder_note"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_editor_absoluteX="50dp"
        app:layout_editor_absoluteY="580dp" />

    <Button
        android:id="@+id/btn_retour"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawableLeft="@drawable/ic_back"
        android:shadowColor="#00FFFFFF"
        android:text="@string/retour"
        android:textColor="#000000"
        app:backgroundTint="#00FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="?android:attr/borderlessButtonStyle"
        />

    <ImageButton
        android:id="@+id/btn_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/share"
        android:minWidth="30dp"
        android:minHeight="30dp"
        android:scaleType="fitXY"
        android:src="@drawable/ic_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>